Major fix, almost done
-Fixed the media page, nested and responsive as it should on all devices.
-Fixed the background gradient, now gradient across multiples div.
-The modal is still broken on mobile too big, cover the screen.

--- a/index.css
+++ b/index.css
@@ -13,8 +13,11 @@
     font-family: 'Cambo', serif;
     color:black;
     font-size: medium;
-    background: rgb(251,255,206);
-    background: linear-gradient(53deg, rgba(251,255,206,1) 0%, rgba(205,183,255,1) 100%);
+    background-image: rgb(251,255,206);
+    background-image: linear-gradient(53deg, rgba(251,255,206,1) 0%, rgba(205,183,255,1) 100%);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;  /* <- here it is to backgroud gradient across multiples div */
 }
 #navtxt{
     font-family: 'Cambo', serif;
